<resources>
    <string name="app_name">SuperMarketScan</string>
    <string name="load_product_error">Error al cargar el producto.</string>
    <string name="load_product_success">Error al cargar el producto.</string>
    <string name="load_products_error">Error al cargar los productos.</string>
    <string name="load_products_success">Error al cargar los productos.</string>
    <string name="delete_product_error">Error al eliminar el producto.</string>
    <string name="delete_product_success">Producto eliminado con éxito.</string>
    <string name="search">Busqueda</string>
    <string name="ordenar_por">Ordenar por:</string>
    <string name="precio_asc">Precio ↗️</string>
    <string name="precio_desc">Precio ↘️</string>
    <string name="total_asc">Total ↗️</string>
    <string name="total_desc">Total ↘️</string>
    <string name="nombre">Nombre</string>
    <string name="add_button">Añadir</string>
    <string name="return_button">Volver</string>
    <string name="scan_product">Escanea tu producto</string>
    <string name="rescan">Toca para escanear</string>
    <string name="yes_capital">Si</string>
    <string name="are_you_sure_delete_product">¿Estás seguro de eliminar el producto?</string>
    <string name="are_you_sure_delete_list">¿Estás seguro de eliminar la lista?</string>
    <string name="no_capital">No</string>
    <string name="total_title">"Total: "</string>
    <string name="euro">€</string>
    <string name="euro_kilo">€/kg</string>
    <string name="delete_all_products_success">Lista eliminada con éxito</string>
    <string name="delete_all_products_error">Error al eliminar la lista</string>
    <string name="no_products_to_save">No hay productos para añadir</string>
    <string name="load_lists_error">Error al cargar las listas favoritas</string>
    <string name="rename_list_success">Se ha renombrado la lista</string>
    <string name="rename_list_error">Fallo al renombrar la lista</string>
    <string name="list_renamed">Lista renombrada</string>
    <string name="name_list_cant_be_empty">El nombre de la lista no puede estar vacío.</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="scan_to_add_products_to_list">Escanea productos para añadir a tu lista.</string>
    <string name="rename_list">Renombrar lista \'</string>
    <string name="a_double_dot">\' a:</string>
    <string name="namelist_double_dot">Nombre de lista:</string>
    <string name="namelist">nameList</string>
    <string name="product_added">Producto añadido</string>
    <string name="product_added_to_list">"Producto añadido a la lista "</string>
    <string name="login_error">Usuario y/o contraseña incorrecto</string>
</resources>