<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/app_bar_client_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom"/>


    <item
        android:id="@+id/order_by_default_item"
        android:title="@string/ordenar_por" />

    <item
        android:id="@+id/order_by_asc_item"
        android:title="@string/precio_asc" />

    <item
        android:id="@+id/order_by_desc_item"
        android:title="@string/precio_desc" />

    <item
        android:id="@+id/order_by_nombre_item"
        android:title="@string/nombre" />

</menu>