<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddProducto">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="6dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:cardCornerRadius="12dp">

            <androidx.camera.view.PreviewView
                android:id="@+id/previewView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


            <androidx.cardview.widget.CardView
                android:id="@+id/scan_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:onClick="scanProduct"
                android:orientation="horizontal"
                android:visibility="visible"
                app:cardBackgroundColor="@color/purple_semi">

                <TextView
                    android:id="@+id/rescan_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/rescan"
                    android:textColor="@color/white_semi"
                    android:textSize="24sp" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="@android:style/Widget.ProgressBar.Large"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:indeterminateBehavior="repeat"
                    android:paddingTop="120dp"
                    android:paddingBottom="120dp"
                    android:visibility="visible" />
            </androidx.cardview.widget.CardView>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="bottom"
                android:orientation="horizontal"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:paddingBottom="0dp">

                <EditText
                    android:id="@+id/codebar_edittext"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:paddingHorizontal="6dp"
                    android:textAlignment="center"
                    android:textColor="@color/white_semi"
                    android:textSize="15sp"
                    tools:text="@string/scan_product" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.42" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="6dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <androidx.cardview.widget.CardView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            app:cardCornerRadius="12dp">

            <ImageView
                android:id="@+id/bike_imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/calculator_fire" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/brand_edittext_add_bike"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingHorizontal="6dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:paddingTop="0dp">

            <EditText
                android:id="@+id/model_edittext_add_bike"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingHorizontal="6dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:paddingTop="0dp">

            <EditText
                android:id="@+id/license_plate_edittext_add_bike"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingHorizontal="6dp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/add_bike_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/custom_button"
        android:onClick="addProducto"
        android:text="@string/add_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>